--- a/index.html
+++ b/index.html
@@ -1,206 +1,211 @@
 <!DOCTYPE HTML>
 
-<style>
+<head>
+    <title>Google</title>
 
-    body, td, a, p, .h {
-        font-family: arial,sans-serif;;
-    }
+    <style>
 
-    a {
-        text-decoration: none;
-    }
+        body, td, a, p, .h {
+            font-family: arial,sans-serif;;
+        }
 
-    header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+        a {
+            text-decoration: none;
+        }
 
-    header .left {
-        display: flex;
-        flex-direction: row;
-        line-height: 50px;
-        font-size: 13px;
-    }
+        header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
 
-    header div a {
-        padding-left: 15px;
-        color: black;
-        opacity: 0.75;
-    }
+        header .left {
+            display: flex;
+            flex-direction: row;
+            line-height: 50px;
+            font-size: 13px;
+        }
 
-    header .right {
-        display: flex;
-        flex-direction: row;   
-        line-height: 50px;
-        font-size: 13px;
-    }
+        header div a {
+            padding-left: 15px;
+            color: black;
+            opacity: 0.75;
+        }
 
-    #gmail {
-        display: flex;
-        justify-self: center;
-    }
+        header .right {
+            display: flex;
+            flex-direction: row;   
+            line-height: 50px;
+            font-size: 13px;
+        }
 
-    #sign-in {
-        width: 65px;
-        height: 30px;
-        margin-left: 8px;
-        margin-top: 10px;
-        margin-right: 20px;
-        padding-left: 5px;
-        background: #186aee;
-        color: white;
-        font-weight: bold;
-        border-color: transparent;
-        border-radius: 3px;
-    }
+        #gmail {
+            display: flex;
+            justify-self: center;
+        }
 
-    #sign-in:hover {
-        background: #5593fa;;
-        outline: none;
-    }
+        #sign-in {
+            width: 65px;
+            height: 30px;
+            margin-left: 8px;
+            margin-top: 10px;
+            margin-right: 20px;
+            padding-left: 5px;
+            background: #186aee;
+            color: white;
+            font-weight: bold;
+            border-color: transparent;
+            border-radius: 3px;
+        }
 
-    #sign-in:focus {
-        background: #407adb;;
-        outline: none;
-    }
+        #sign-in:hover {
+            background: #5593fa;;
+            outline: none;
+        }
 
-    .main {
-        margin: auto;
-        margin-top: 130px;
-        height: 233px;
-    }
+        #sign-in:focus {
+            background: #407adb;;
+            outline: none;
+        }
 
-    .logo {
-        display: flex;
-        justify-content: center;
-        margin: auto;
-    }
+        .main {
+            margin: auto;
+            margin-top: 130px;
+            height: 233px;
+        }
 
-    .search-bar {
-        display: flex;
-        justify-content: center;
-        margin: 30px auto 15px auto;
-        width: 500px;
-        height: 40px;
-        border: 1px solid #d4d4d4;
-        border-radius: 25px;
-        outline: none;
-        background: white url(mag-glass.png) left no-repeat;
-        padding-left: 40px;
-        padding-right: 40px;
-        font-size: 17px;
-    }
+        .logo {
+            display: flex;
+            justify-content: center;
+            margin: auto;
+        }
 
-    .search-bar:hover {
-        box-shadow: 0px 0px 4px 1px #d4d4d4;
-        border-color: transparent;
-    }
+        .search-bar {
+            display: flex;
+            justify-content: center;
+            margin: 30px auto 15px auto;
+            width: 500px;
+            height: 40px;
+            border: 1px solid #d4d4d4;
+            border-radius: 25px;
+            outline: none;
+            background: white url(mag-glass.png) left no-repeat;
+            padding-left: 40px;
+            padding-right: 40px;
+            font-size: 17px;
+        }
 
-    .buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: auto;
-        height: 35px;
-    }
+        .search-bar:hover {
+            box-shadow: 0px 0px 4px 1px #d4d4d4;
+            border-color: transparent;
+        }
 
-    .buttons .appearance {
-        border: 1px solid transparent;
-        background-color: #F2F2F2;
-        border-radius: 4px;
-        margin-left: 10px;
-        font-size: 14px;
-        color: #5E6368;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: auto;
+            height: 35px;
+        }
 
-    .buttons .appearance:hover {
-        border: 1px solid #d4d4d4;
-        background-color: #F7F7F7;
-        border-radius: 4px;
-        color: black;
-    }
+        .buttons .appearance {
+            border: 1px solid transparent;
+            background-color: #F2F2F2;
+            border-radius: 4px;
+            margin-left: 10px;
+            font-size: 14px;
+            color: #5E6368;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
 
-    .buttons .appearance:focus {
-        outline: none;
-        border-color: #4285F4;
-    }
+        .buttons .appearance:hover {
+            border: 1px solid #d4d4d4;
+            background-color: #F7F7F7;
+            border-radius: 4px;
+            color: black;
+        }
 
-    #lang {
-        display: flex;
-        justify-content: center;
-        margin-top: 35px;
-        font-size: 13px;
-    }
+        .buttons .appearance:focus {
+            outline: none;
+            border-color: #4285F4;
+        }
 
-    a:hover {
-        text-decoration: underline;
-    }
+        #lang {
+            display: flex;
+            justify-content: center;
+            margin-top: 35px;
+            font-size: 13px;
+        }
 
-    .country {
-        position: fixed;
-        bottom: 40px;
-        right: 0;
-        width: 100%;
-        height: 30px;
-        display: flex;
-        justify-content: flex-start;
-        background-color: #F2F2F2;
-        border: 1px solid #e4e4e4;
-        padding-left: 20px;
-        padding-bottom: 15px;
-    }
+        a:hover {
+            text-decoration: underline;
+        }
 
-    .country p {
-        font-size: 15px;
-        padding-left: 30px;
-        color: rgba(0,0,0,.54);
-    }
+        .country {
+            position: fixed;
+            bottom: 40px;
+            right: 0;
+            width: 100%;
+            height: 30px;
+            display: flex;
+            justify-content: flex-start;
+            background-color: #F2F2F2;
+            border: 1px solid #e4e4e4;
+            padding-left: 20px;
+            padding-bottom: 15px;
+        }
 
-    .footer {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 40px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        background-color: #F2F2F2;
-        border: 1px solid #e4e4e4;
-        font-size: 14px;
-        color: #6F6F6F;
-    }
+        .country p {
+            font-size: 15px;
+            padding-left: 30px;
+            color: rgba(0,0,0,.54);
+        }
 
-    .left-footer {
-        display: flex;
-        padding-left: 30px;
-        padding-top: 12px;
-        padding-bottom: 5px;
-        color: #5f6368;
-    }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            background-color: #F2F2F2;
+            border: 1px solid #e4e4e4;
+            font-size: 14px;
+            color: #6F6F6F;
+        }
 
-    .right-footer {
-        display: flex;
-        padding-right: 30px;
-        padding-top: 12px;
-        padding-bottom: 5px;
-        color: #5f6368;
-    }
+        .left-footer {
+            display: flex;
+            padding-left: 30px;
+            padding-top: 12px;
+            padding-bottom: 5px;
+            color: #5f6368;
+        }
 
-    .left-footer a {
-        padding-right: 20px; 
-        color: #404040;
-    }
+        .right-footer {
+            display: flex;
+            padding-right: 30px;
+            padding-top: 12px;
+            padding-bottom: 5px;
+            color: #5f6368;
+        }
 
-    .right-footer a {
-        padding-left: 20px;
-        color: #404040;
-    }
+        .left-footer a {
+            padding-right: 20px; 
+            color: #404040;
+        }
 
-</style>
+        .right-footer a {
+            padding-left: 20px;
+            color: #404040;
+        }
+
+    </style>
+
+</head>
 
 <html>
     <body>
